# uniflow

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  uniflow.config.yaml  vitest.config.ts
.claude/: settings.local.json
.githooks/: commit-msg
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  connector_request.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
cli/: package.json  tsconfig.json
cli/src/: cli.ts  config.ts
cli/src/commands/: deploy.test.ts  deploy.ts  destroy.ts  dev.ts  init.test.ts  init.ts  status.ts  upgrade.ts
cli/src/migrations/: 0001_init_tables.ts  runner.ts
connectors/s3-export/: package.json
connectors/s3-export/src/: S3ExportConnector.ts  index.ts
connectors/sdk/: package.json
connectors/webhook/: package.json
docker/: docker-compose.yml
examples/: send-events.ts
examples/cdk-app/: index.ts
infra/: package.json
infra/src/: index.ts
libs/event-schema/: package.json
libs/identity/: package.json
libs/logger/: package.json
sdk/js/: package.json
sdk/js/src/: index.ts  (+3 more)
sdk/python/: pyproject.toml
sdk/python/src/uniflow/: __init__.py  client.py  types.py
sdk/python/tests/: test_client.py
services/audience-builder/: Dockerfile  package.json
services/ingest/: package.json
services/management-api/: package.json
services/processor/: package.json
ui/: package.json
(+52 files in other folders)
