[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniflow-python"
version = "0.1.0"
description = "Uniflow CDP Python tracking SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpretty>=1.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uniflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
